# DiffusionGemma-E4B

./: .gitignore  README.md  pyproject.toml
artifacts/: FORMAL_WEIGHTS_NOT_COMPLETED.json  diffusiongemma-e4b-repro-bundle.tar.gz.json
artifacts/tokenizer_processor_gemma4_e4b/: chat_template.jinja  processor_config.json  tokenizer_config.json
configs/: dataset_sources.json
configs/diffusiongemma-e4b/: config.json  diffusiongemma_e4b_config_metadata.json
data/corruption_validation/: corruption_000000.npz  corruption_progress.json
data/raw_self_continuation/: local_validation_progress.json  local_validation_self_continuation.jsonl
docs/: DATASET_SOURCE_PLAN.md  DEPLOYMENT_GUIDE.md  FINAL_REPORT.md  RESEARCH_NOTES.md  RUNPOD_HANDOFF.md
outputs/local_probe/: local_feasibility_report.json
outputs/validation/: fake_wrapper_exclusion.json  meta_student_init.json
scripts/: bootstrap_windows.ps1  corrupt_formal.ps1  generate_local_lmstudio.ps1  local_probe.ps1  runpod_corrupt.sh  runpod_generate.sh  runpod_monitor.sh  runpod_setup.sh  runpod_transplant_train.sh  runpod_validate_export.sh  train_lora.ps1  transplant_weights.ps1  validate_export.ps1
scripts/linux/: corrupt.sh  generate.sh  monitor.sh  prepare_prompts.sh  run_pipeline.sh  serve_teacher.sh  setup.sh  transplant_train.sh  validate_export.sh
scripts/windows/: corrupt.ps1  generate.ps1  prepare_prompts.ps1  probe.ps1  run_pipeline.ps1  setup.ps1  transplant_train.ps1  validate_export.ps1
tests/: test_config_and_corruption.py  test_infer.py  test_multimodal_pipeline.py  test_student_transplant.py
(+15 files in other folders)
